--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
+}
+
+.player1 {
+  width: 50%; float: left
+}
+.player2 {
+  width: 50%; float: right
 }
 
 @keyframes App-logo-spin {
